--- a/behat-config.yml
+++ b/behat-config.yml
@@ -13,6 +13,7 @@ default:
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\EventSessionContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\SessionTypeContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\EventContext
+        - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Result\ClassificationContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Result\EntryContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Result\RetirementContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Standing\AnalyticsCreationContext
