--- a/etc/Fixtures/Core/motorsport.team.team.yaml
+++ b/etc/Fixtures/Core/motorsport.team.team.yaml
@@ -9,3 +9,9 @@ toroRosso:
 
 williams:
   ref: 'd6f1339e-97d5-4e3a-9fb6-6f7db45e34b7'
+
+camposRacing:
+  ref: '33bcdaa5-fcbd-4682-bb42-3ec5ef3210ca'
+
+artGrandPrix:
+  ref: 'a9885bc3-a8f4-4dbb-9f66-5a383b781cb9'
