--- a/etc/Fixtures/Core/motorsport.event.eventSession.yaml
+++ b/etc/Fixtures/Core/motorsport.event.eventSession.yaml
@@ -67,3 +67,17 @@ belgianGrandPrix2019Race:
   hasResult: false
   startDate: '2019-09-01 13:10:00'
   endDate: '2019-09-01 14:10:00'
+
+australianGrandPrix2023FormulaTwoRaceOne:
+  sessionTypeId: '@motorsport.event.sessionType.race'
+  eventId: '@motorsport.event.event.australianGP2023FormulaTwo'
+  hasResult: false
+  startDate: '2023-04-01 2:00:00'
+  endDate: '2023-04-01 3:00:00'
+
+australianGrandPrix2023FormulaTwoRaceTwo:
+  sessionTypeId: '@motorsport.event.sessionType.race'
+  eventId: '@motorsport.event.event.australianGP2023FormulaTwo'
+  hasResult: false
+  startDate: '2023-04-02 3:00:00'
+  endDate: '2023-04-02 4:00:00'
