--- a/apps/MotorsportTracker/Backend/config/routes/motorsport.yaml
+++ b/apps/MotorsportTracker/Backend/config/routes/motorsport.yaml
@@ -4,6 +4,12 @@ calendar:
   type: annotation
   stateless: true
 
+results:
+  resource: ../../src/MotorsportCache/Results/Controller/
+  prefix: /api/v1/results
+  type: annotation
+  stateless: true
+
 schedule:
   resource: ../../src/MotorsportCache/Schedule/Controller/
   prefix: /api/v1/schedule
