--- a/behat-config.yml
+++ b/behat-config.yml
@@ -10,6 +10,7 @@ default:
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportCache\Calendar\ViewCalendarEventsContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportCache\Calendar\ViewSeasonScheduleContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportCache\Event\SeasonEventsContext
+        - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportCache\Event\EventCachedContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Championship\ChampionshipPresentationCreationContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Championship\ChampionshipCreationContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Championship\SeasonCreationContext
@@ -42,6 +43,7 @@ default:
       contexts:
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportCache\Calendar\SyncCalendarContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportCache\Event\SeasonEventsContext
+        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportCache\Event\EventsCacheContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportCache\Result\ComputeResultContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\CreateChampionshipPresentationContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\SeasonContext
