--- a/apps/MotorsportTracker/Backend/config/routes/motorsport.yaml
+++ b/apps/MotorsportTracker/Backend/config/routes/motorsport.yaml
@@ -16,6 +16,12 @@ results:
   type: annotation
   stateless: true
 
+event_graphs:
+  resource: ../../src/MotorsportCache/EventGraph/Controller/
+  prefix: /api/v1/graph/event
+  type: annotation
+  stateless: true
+
 schedule:
   resource: ../../src/MotorsportCache/Schedule/Controller/
   prefix: /api/v1/schedule
