--- a/.env.prod
+++ b/.env.prod
@@ -10,5 +10,5 @@ JWT_EXP_TOKEN="+10 minute"
 ###< JWT ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https://motorsporttracker.pierrelouislegrand.com$'
 ###< nelmio/cors-bundle ###
