--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.2",
-        "ext-curl": "*",
         "ext-ctype": "*",
+        "ext-curl": "*",
         "ext-iconv": "*",
         "ext-pdo": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
@@ -29,6 +29,7 @@
         "symfony/messenger": "6.0.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/proxy-manager-bridge": "6.0.*",
+        "symfony/requirements-checker": "^2.0",
         "symfony/runtime": "6.0.*",
         "symfony/service-contracts": "^2.5",
         "symfony/twig-bundle": "6.0.*",
@@ -98,7 +99,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "requirements-checker": "script"
         }
     }
 }
