--- a/.env
+++ b/.env
@@ -15,6 +15,10 @@ BACKOFFICE_XDEBUG_PORT_EXTERNAL=9040
 NODE_VERSION=16.13.2
 FRONTEND_SERVER_PORT_EXTERNAL=3000
 
+# Memcached
+MEMCACHED_VERSION=1.6
+MEMCACHED_PORT_EXTERNAL=11211
+
 # Composer Config
 COMPOSER_HOME=/srv/cache/composer
 COMPOSER_CACHE_DIR=/srv/cache/composer
