--- a/.env.dev
+++ b/.env.dev
@@ -23,6 +23,10 @@ DB_CACHE_USER=${DB_USER}
 DB_CACHE_PASSWORD=${DB_PASSWORD}
 ###< DB Config ###
 
+###> Memcached ###
+MEMCACHED_DSN=memcached:11211
+###< Memcached ###
+
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
