--- a/apps/Backoffice/config/packages/framework.yaml
+++ b/apps/Backoffice/config/packages/framework.yaml
@@ -15,6 +15,14 @@ framework:
       symfony.messenger.bus.event: ~
       symfony.messenger.bus.query: ~
 
+  cache:
+    default_memcached_provider: 'memcached://%kishlin.memcached%'
+    pools:
+      app.cache.memcached:
+        adapter: cache.adapter.memcached
+        public: false
+        default_lifetime: 31536000
+
 when@test:
   framework:
     test: true
