--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-iconv": "*",
+        "ext-memcached": "*",
         "ext-pdo": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "firebase/php-jwt": "^6.0",
