--- a/apps/Backoffice/config/services.yaml
+++ b/apps/Backoffice/config/services.yaml
@@ -102,6 +102,12 @@ services:
     alias: 'kishlin.app.infrastructure.connection.core'
 
 
+  ##> Cache
+
+  Kishlin\Backend\Shared\Domain\Cache\CachePersister:
+    class: Kishlin\Backend\Shared\Infrastructure\Cache\CachePersisterUsingSymfony
+
+
   ##> Monitoring
 
   Kishlin\Apps\Backoffice\Monitoring\Controller\CheckHealthController:
