Configuration: Add a namespace to Memcached pools
These changes ensure that all applications share the same namespace, preventing data duplication

--- a/.env.dev
+++ b/.env.dev
@@ -25,6 +25,7 @@ DB_CACHE_PASSWORD=${DB_PASSWORD}
 
 ###> Memcached ###
 MEMCACHED_DSN=memcached:11211
+MEMCACHED_NAMESPACE=motorsporttracker
 ###< Memcached ###
 
 ###> symfony/messenger ###
