Feature: Extract countries from drivers and teams

--- a/etc/Fixtures/Core/motorsport.entrylist.entry.yaml
+++ b/etc/Fixtures/Core/motorsport.entrylist.entry.yaml
@@ -1,6 +1,7 @@
 maxVerstappenAtDutchGP:
   event: '@motorsport.event.event.dutchGrandPrix2022'
   driver: '@motorsport.driver.driver.maxVerstappen'
+  country: '@country.country.netherlands'
   team: '@motorsport.team.team.redBullRacing'
   chassis: 'Red Bull RB19'
   engine: 'Honda H001'
