--- a/etc/Fixtures/Core/motorsport.standing.analytics.yaml
+++ b/etc/Fixtures/Core/motorsport.standing.analytics.yaml
@@ -1,6 +1,7 @@
 maxVerstappen2022:
   season: '@motorsport.championship.season.formulaOne2022'
   driver: '@motorsport.driver.driver.maxVerstappen'
+  country: '@country.country.netherlands'
   position: 1
   points: 454.0
   avgFinishPosition: 2.81
