--- a/apps/Backoffice/config/services.yaml
+++ b/apps/Backoffice/config/services.yaml
@@ -118,16 +118,28 @@ services:
       $table: 'migration_version'
       $folder: '%kishlin.src.dir%/etc/Migrations/Cache'
 
-  Kishlin\Apps\Backoffice\Persistence\Command\ApplyMigrationCommandUsingSymfony:
-    class: Kishlin\Apps\Backoffice\Persistence\Command\ApplyMigrationCommandUsingSymfony
+  Kishlin\Backend\Persistence\Infrastructure\CommandUsingSymfony\ApplyMigrationCommandUsingSymfony:
+    class: Kishlin\Backend\Persistence\Infrastructure\CommandUsingSymfony\ApplyMigrationCommandUsingSymfony
     bind:
       $migrator: '@Kishlin\Backend\Persistence\Migration\Migrator'
       $database: 'core'
 
-  Kishlin\Apps\Backoffice\Persistence\Command\ApplyMigrationCommandUsingSymfony.cache:
-    class: Kishlin\Apps\Backoffice\Persistence\Command\ApplyMigrationCommandUsingSymfony
+  Kishlin\Backend\Persistence\Infrastructure\CommandUsingSymfony\ApplyMigrationCommandUsingSymfony.cache:
+    class: Kishlin\Backend\Persistence\Infrastructure\CommandUsingSymfony\ApplyMigrationCommandUsingSymfony
     bind:
       $migrator: '@Kishlin\Backend\Persistence\Migration\Migrator.cache'
+      $database: 'cache'
+
+  Kishlin\Backend\Persistence\Infrastructure\CommandUsingSymfony\PrepareDBCommandUsingSymfony:
+    class: Kishlin\Backend\Persistence\Infrastructure\CommandUsingSymfony\PrepareDBCommandUsingSymfony
+    bind:
+      $connection: '@kishlin.app.infrastructure.connection.core'
+      $database: 'core'
+
+  Kishlin\Backend\Persistence\Infrastructure\CommandUsingSymfony\PrepareDBCommandUsingSymfony.cache:
+    class: Kishlin\Backend\Persistence\Infrastructure\CommandUsingSymfony\PrepareDBCommandUsingSymfony
+    bind:
+      $connection: '@kishlin.app.infrastructure.connection.cache'
       $database: 'cache'
 
   ##> Cache
