--- a/.env.test
+++ b/.env.test
@@ -21,3 +21,8 @@ DB_CACHE_PORT=${DB_PORT}
 DB_CACHE_USER=${DB_USER}
 DB_CACHE_PASSWORD=${DB_PASSWORD}
 ###< DB Config ###
+
+###> Memcached ###
+MEMCACHED_DSN=memcached:11211
+MEMCACHED_NAMESPACE=motorsporttracker-test
+###< Memcached ###
