Configuration: Do not load unecessary services

--- a/apps/MotorsportTracker/Backend/config/services.yaml
+++ b/apps/MotorsportTracker/Backend/config/services.yaml
@@ -27,6 +27,7 @@ services:
       - '../../../../src/Backend/**/Application/*/*Exception.php'
       - '../../../../src/Backend/**/Infrastructure/Persistence/Fixtures'
       - '../../../../src/Backend/**/Domain/{DomainEvent,Entity,ReadModel,ValueObject,View}'
+      - '../../../../src/Backend/Persistence/{Infrastructure,Migration}'
 
 
   ##> Cache
