Feature: Add a command to bypass using cache for HTTP Client

--- a/.env.dev
+++ b/.env.dev
@@ -10,6 +10,10 @@ JWT_ALGORITHM='HS256'
 JWT_EXP_CLAIM_IS_REQUIRED=false
 ###< JWT ###
 
+###> HTTPClient ###
+HTTP_CLIENT_USE_CACHE=true
+###< HTTPClient ###
+
 ###> DB Config ###
 DB_CORE_NAME=${DB_CORE_DEV}
 DB_CORE_HOST=${DB_HOST}
