--- a/.env.prod
+++ b/.env.prod
@@ -9,6 +9,10 @@ JWT_EXP_REFRESH_TOKEN="+1 month"
 JWT_EXP_TOKEN="+10 minute"
 ###< JWT ###
 
+###> HTTPClient ###
+HTTP_CLIENT_USE_CACHE=false
+###< HTTPClient ###
+
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https://motorsporttracker.pierrelouislegrand.com$'
 ###< nelmio/cors-bundle ###
