Configuration: Load working dir from environment variable

--- a/.env.dev
+++ b/.env.dev
@@ -2,6 +2,7 @@
 APP_ENV=dev
 APP_SECRET=f9978f460b7d9384d6909d90becf7a71
 HOSTNAME='http://localhost:8000'
+WORKDIR='/app'
 ###< symfony/framework-bundle ###
 
 ###> JWT ###
