--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,6 @@
 ###> symfony/framework-bundle ###
 APP_ENV=prod
+WORKDIR='/home/kishlin/workspace/MotorsportTracker'
 ###< symfony/framework-bundle ###
 
 ###> JWT ###
