--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=test
 APP_SECRET=$ecretf0rt3st
+WORKDIR='/app'
 ###< symfony/framework-bundle ###
 
 ###> JWT ###
@@ -8,6 +9,10 @@ JWT_SECRET_KEY='@;wiiMge~SBY=.M,Kiw-B!6cf)kA[c'
 JWT_ALGORITHM='HS256'
 JWT_EXP_CLAIM_IS_REQUIRED=false
 ###< JWT ###
+
+###> HTTPClient ###
+HTTP_CLIENT_USE_CACHE=false
+###< HTTPClient ###
 
 ###> DB Config ###
 DB_CORE_NAME=${DB_CORE_TEST}
