Configuration: Exclude messenger from console output in prod

--- a/apps/Backoffice/config/packages/monolog.yaml
+++ b/apps/Backoffice/config/packages/monolog.yaml
@@ -64,7 +64,7 @@ when@prod:
             console:
                 type: console
                 process_psr_3_messages: false
-                channels: ["!event", "!doctrine"]
+                channels: ["!event", "!doctrine", "!console", "!messenger"]
             deprecation:
                 type: stream
                 channels: [deprecation]
