Feature: Migrate the Event Schedule to app router

--- a/apps/MotorsportTracker/Frontend/.eslintrc.json
+++ b/apps/MotorsportTracker/Frontend/.eslintrc.json
@@ -73,6 +73,7 @@
                 "extensions": [".js", ".jsx", ".ts", ".tsx"]
             }
         ],
+        "react/require-default-props": "off",
         "yoda": ["error", "always"]
     }
 }
