--- a/apps/MotorsportTracker/Frontend/.env
+++ b/apps/MotorsportTracker/Frontend/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://api.motorsporttracker.pierrelouislegrand.com
+NEXT_PUBLIC_API_URL=http://backend:8000
 BUILD_FROM_YEAR=2018
