Feature: Use a standalone database as client cache

--- a/.env
+++ b/.env
@@ -26,8 +26,10 @@ COMPOSER_CACHE_DIR=/srv/cache/composer
 # DB Config
 DB_CORE_DEV=core-dev
 DB_CACHE_DEV=cache-dev
+DB_CLIENT_DEV=client-dev
 DB_CORE_TEST=core-test
 DB_CACHE_TEST=cache-test
+DB_CLIENT_TEST=client-test
 DB_USER=motorsporttracker
 DB_PASSWORD=motorsporttracker
 DB_VERSION=14.6
