--- a/.env.dev
+++ b/.env.dev
@@ -26,6 +26,11 @@ DB_CACHE_HOST=${DB_HOST}
 DB_CACHE_PORT=${DB_PORT}
 DB_CACHE_USER=${DB_USER}
 DB_CACHE_PASSWORD=${DB_PASSWORD}
+DB_CLIENT_NAME=${DB_CLIENT_DEV}
+DB_CLIENT_HOST=${DB_HOST}
+DB_CLIENT_PORT=${DB_PORT}
+DB_CLIENT_USER=${DB_USER}
+DB_CLIENT_PASSWORD=${DB_PASSWORD}
 ###< DB Config ###
 
 ###> Memcached ###
