--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "ext-iconv": "*",
         "ext-memcached": "*",
         "ext-pdo": "*",
+        "ext-zlib": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "firebase/php-jwt": "^6.0",
         "nelmio/cors-bundle": "^2.2",
@@ -36,7 +37,7 @@
         "symfony/twig-bundle": "6.0.*",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^3.3"
+        "twig/twig": "^3.3",
     },
     "config": {
         "allow-plugins": {
